
0.5.0
=====

* FEATURE: Add experimental support for LDAP.
* BUG: Fixes for MS SQL issues, provided by Scott Croco (scroco).
* BUG: "Login already exists" error when trying to update user account fixed.
* FEATURE: Remove (now unused) convert-to-file option from Special:Convert.
* FEATURE: Updated Chinese translations from Feilong Huang (hfl).
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated German translations from Axel Kramer (axelclk).

0.4.3
=====

* FEATURE: Add support for Mediawiki <ref> tag as described on
  http://meta.wikimedia.org/wiki/Help:Footnotes.
* FEATURE: Add "Watch Topic" checkbox when editing.
* FEATURE: Add "Special:Specialpages" page.
* BUG: Do not HTML escape &lt; and &gt;.
* BUG: Fix issue with non-ASCII file desriptions.
* FEATURE: Improve support for localized default topics.
* FEATURE: Add support for setting HTML meta values.
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).
* FEATURE: Updated Danish translations from Anders Monrad (g9adm).

0.4.2
=====

* FEATURE: Add support for watchlists as described on
  http://meta.wikimedia.org/wiki/Help:Watching_pages.
* FEATURE: AdminOnlyTopics replaced by Special:TopicsAdmin.
* FEATURE: Upgrade to Spring Framework 2.0.
* BUG: Refreshing after a form submission should no longer cause information
  to be resubmitted.
* FEATURE: "Go To" button in search should redirect to search results if
  no such topic exists.
* FEATURE: Be more efficient with caching to improve performance.
* FEATURE: Add a checkbox to Special:Manage to delete/undelete an associated
  comments page.
* FEATURE: Provide an option to set maximum table of contents depth.
* FEATURE: After editing a section, page will now reload to that section.
* BUG: Fix parsing error when template parameters are preceded by whitespace.
* BUG: Fix error when uploading files with non-English file names.